<resources>
    <string name="app_name">HassleFree</string>
    <string name="HeyText">Hi</string>
    <string name="TravellerName">Traveller, </string>
    <string name="avatar">Avatar</string>
    <string name="TagLine">Where do you want \nto go?</string>
    <string name="discover_a_city">  Discover a city</string>
    <string name="explore">Explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="get_complete_trip_detail">Get complete trip detail</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="destination_image">destination image</string>
</resources>